--- a/dashboard/app/views/devise/registrations/edit.html.haml
+++ b/dashboard/app/views/devise/registrations/edit.html.haml
@@ -6,19 +6,6 @@
 - @page_title = t('activerecord.attributes.user.edit_header')
 - no_email = current_user.no_personal_email? || params[:noEmail] == 'true'
 
--# We determine if the student is potentially locked by looking at their age
--# If they are older (or there is no policy for them) they are unlocked
--# This ignores them being explicitly unlocked by parental permission so we
--# can show the 'Granted' status of that permission later.
-- potentially_locked = Policies::ChildAccount.underage?(current_user)
--# The student is in a 'lockout' flow if they are potentially locked out and not unlocked
-- studentInLockoutFlow = potentially_locked && !Policies::ChildAccount::ComplianceState.permission_granted?(current_user)
--# We need to also account for the case when the US State is not specified
--# All students are locked out of account settings features until they specify these
-- locked = studentInLockoutFlow || current_user.country_code.nil? || current_user.us_state.nil?
--# Put this behind an experiment flag for now
-- locked &&= !!experiment_value('cpa-partial-lockout', request)
-
 = render_parental_permission_banner(current_user, request)
 
 = link_to :back do
@@ -83,23 +70,22 @@
   - if !resource.teacher?
     .field
       = f.label t('signup_form.age'), class: "label-bold"
-      - if studentInLockoutFlow
+      - if @student_in_lockout_flow
         %em= t('user.update_field_parent_permission_required')
         %br/
-      = f.select :age, User::AGE_DROPDOWN_OPTIONS, {}, disabled: studentInLockoutFlow
+      = f.select :age, User::AGE_DROPDOWN_OPTIONS, {}, disabled: @student_in_lockout_flow
     - if experiment_value('gender', request)
       .field
         = f.label :gender_student_input, t('signup_form.gender'), class: "label-bold"
         = f.text_field :gender_student_input, maxlength: 50
-    .field
-      - location = Geocoder.search(request.ip).try(:first)
-      - country_code = location&.country_code.to_s.upcase
-      = f.label :us_state, t('activerecord.attributes.user.us_state'), class: 'label-bold'
-      - if studentInLockoutFlow
-        %em= t('user.update_field_parent_permission_required')
-        %br/
-      = f.select :us_state, us_state_options, {include_blank: t('school_info.select_state')}, disabled: studentInLockoutFlow, required: true
-      = f.hidden_field :country_code, value: country_code
+    - if @is_usa
+      .field
+        = f.label :us_state, t('activerecord.attributes.user.us_state'), class: 'label-bold'
+        - if @student_in_lockout_flow
+          %em= t('user.update_field_parent_permission_required')
+          %br/
+        = f.select :us_state, us_state_options, {include_blank: t('school_info.select_state')}, disabled: @student_in_lockout_flow, required: true
+        = f.hidden_field :country_code, value: country_code
   - if resource.teacher?
     .field
       = f.label :school, class: "label-bold"
@@ -155,7 +141,7 @@
   = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put, id: 'lti-sync-settings-form'}) do |f|
     = f.hidden_field :lti_roster_sync_enabled
 
-- if potentially_locked && experiment_value('cpa-partial-lockout', request)
+- if @potentially_locked && experiment_value('cpa-partial-lockout', request)
   %div#lockout-linked-accounts{
     data: {
       request_date: @request_date&.iso8601,
@@ -191,7 +177,7 @@
   %h2= t('user.create_personal_login')
 
   %p#edit_user_create_personal_account_description
-    - if locked
+    - if @locked
       - if current_user.us_state.nil?
         = t('user.create_personal_login_state_required')
       - else
@@ -200,14 +186,14 @@
       = no_email ? t('user.create_personal_login_under_13_info') : t('user.create_personal_login_info')
       = t('user.create_personal_login_link_account') if current_user.migrated?
   .div{style: 'position: relative'}
-    = form_for(current_user, url: '/users/upgrade', html: {id: 'edit_user_create_personal_account', style: (locked ? 'opacity: 0.25;' : '')}, namespace: 'create_personal') do |form|
+    = form_for(current_user, url: '/users/upgrade', html: {id: 'edit_user_create_personal_account', style: (@locked ? 'opacity: 0.25;' : '')}, namespace: 'create_personal') do |form|
       = form.hidden_field :hashed_email
       %h3= t('user.enter_new_login_info')
       - if no_email
         = hidden_field_tag :noEmail, true
         .field
           = form.label t('user.create_personal_login_under_13_username'), class: "label-bold"
-          = form.text_field :username, maxlength: 255, disabled: locked
+          = form.text_field :username, maxlength: 255, disabled: @locked
       - else
         .field
           = form.label :personal_email, class: "label-bold" do
@@ -216,26 +202,26 @@
           = form.email_field :email, placeholder: '', autocomplete: 'off', maxlength: 255
       .field
         = form.label :password, maxlength: 255, class: "label-bold"
-        = form.password_field :password, autocomplete: 'off', maxlength: 255, disabled: locked
+        = form.password_field :password, autocomplete: 'off', maxlength: 255, disabled: @locked
       .field
         = form.label :password_confirmation, class: "label-bold"
         = form.password_field :password_confirmation, autocomplete: 'off', maxlength: 255
-      - if !locked
+      - if !@locked
         - if current_user.secret_word_account?
           %h3= t('user.confirm_secret_words')
           .field
             = form.label :secret_words, class: "label-bold"
-            = form.text_field :secret_words, autocomplete: 'off', value: '', maxlength: 255, disabled: locked
+            = form.text_field :secret_words, autocomplete: 'off', value: '', maxlength: 255, disabled: @locked
         - if no_email
           %h3= t('user.enter_parent_email')
           .field
             = form.label t('user.create_personal_login_under_13_parent_email'), class: "label-bold"
-            = form.text_field :parent_email, maxlength: 255, disabled: locked
+            = form.text_field :parent_email, maxlength: 255, disabled: @locked
         = t('user.create_personal_login_terms_markdown', terms_of_service_url: CDO.code_org_url('/tos'), markdown: true).html_safe
         - unless no_email
           = t('user.create_personal_login_email_note_markdown', privacy_policy_url: CDO.code_org_url('/privacy'), markdown: true).html_safe
         %div= form.submit t('crud.submit'), id: 'create-personal-login', class: 'btn btn-warning'
-    - if locked
+    - if @locked
       %div{style: 'position: absolute; left: 0; right: 0; top: 0; bottom: 0; display: flex; flex-direction: row; align-items: center; justify-content: center; pointer-events: none'}
         %img{src: asset_path('auth/lock.svg'), style: 'width: 3rem; height: 3rem'}
 
