--- a/dashboard/app/views/lti/v1/account_linking/landing.haml
+++ b/dashboard/app/views/lti/v1/account_linking/landing.haml
@@ -20,6 +20,7 @@
     script_data[:continue_account_url] = session[:user_return_to] || home_path
     script_data[:email] = email
     script_data[:new_cta_type] = new_cta_type
+    script_data[:user_type] = landing_session[:user_type] || current_user&.user_type
 
   %script{src: webpack_asset_path('js/lti/v1/account_linking/landing.js'), data: {json: script_data.to_json}}}
 %body
