--- a/apps/src/aichat/views/chatWorkspace.module.scss
+++ b/apps/src/aichat/views/chatWorkspace.module.scss
@@ -10,11 +10,11 @@ $default-spacing: 2px;
   flex-direction: column;
   background-color: $light_white;
   padding: 10px;
+  overflow: hidden;
 }
 
 .conversationArea {
   margin: 5px 2%;
-  height: 65vh;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
