--- a/apps/src/componentLibrary/alert/alert.module.scss
+++ b/apps/src/componentLibrary/alert/alert.module.scss
@@ -1,6 +1,7 @@
 @import 'color';
 @import "@cdo/apps/componentLibrary/typography/typography.module";
 @import "@cdo/apps/componentLibrary/common/styles/mixins";
+@import "@cdo/apps/componentLibrary/common/styles/colors.css";
 
 $alert-span-vertical-top-spacing: 2px;
 
@@ -26,7 +27,8 @@ $alert-span-vertical-top-spacing: 2px;
 
 // Types (colors)
 .alert-primary {
-  background-color: $light_secondary_100;
+  //background-color: $light_secondary_100;
+  background-color: var(--background-brand-aqua-bg-brand-aqua-light)
 }
 
 .alert-success {
