--- a/apps/src/lab2/views/components/predict.module.scss
+++ b/apps/src/lab2/views/components/predict.module.scss
@@ -27,3 +27,12 @@
   background-color: $light_white;
   border-radius: 5px;
 }
+
+.predictResetButton {
+  background-color: $red;
+}
+
+.resetError {
+  color: $red;
+  font-style: italic;
+}
