--- a/apps/src/lab2/views/components/predict.module.scss
+++ b/apps/src/lab2/views/components/predict.module.scss
@@ -28,11 +28,8 @@
   border-radius: 5px;
 }
 
-.predictResetButton {
-  background-color: $red;
-}
-
 .resetError {
   color: $red;
   font-style: italic;
+  margin-top: 5px;
 }
