--- a/apps/src/lib/ui/lti/link/LtiLinkAccountPage/link-account.module.scss
+++ b/apps/src/lib/ui/lti/link/LtiLinkAccountPage/link-account.module.scss
@@ -1,7 +1,21 @@
+@import 'style-constants';
+
 .icon {
   width: 45px;
   height: 36px;
   color: #0093A4;
+}
+
+.cdoLogo {
+  margin-top: 60px;
+}
+
+.titleContainer {
+  margin-top: 24px;
+}
+
+.titleDesc {
+  margin: 10px 0 64px 0;
 }
 
 .cardContainer {
@@ -25,6 +39,8 @@
 }
 
 .mainContainer {
+  max-width: $content-width;
+  margin: auto;
   font-size: 16px;
 }
 
@@ -32,20 +48,9 @@
   text-align: center;
 }
 
-.welcomeBannerContainer {
-  display: flex;
-  gap: 18px;
-  justify-content: center;
-  align-items: center;
-}
-
 .welcomeBannerContainer img {
   width: 40px;
   height: 40px;
-}
-
-.exchangeIcon {
-  color: #7F8286;
 }
 
 .newAccountForm {
