--- a/apps/src/componentLibrary/common/styles/primitiveColors.css
+++ b/apps/src/componentLibrary/common/styles/primitiveColors.css
@@ -1,8 +1,8 @@
-/* DO NOT IMPORT THIS FILE DIRECTLY. Use colors.css
-instead, which convey semantic and utility colors and also defines themes. */
+/* DO NOT IMPORT THIS FILE DIRECTLY. Use colors.css instead,
+ which convey semantic and utility colors and also defines themes. */
 
-/* Colors are taken from DISCO Variables New Figma File - Primitive colors variables collection via variables2css plugin
- that generates css code based on Figma variables values and names.
+/* Colors are taken from DISCO Variables New Figma File - Primitive colors variables collection
+ via variables2css plugin that generates css code based on Figma variables values and names.
  We're using css here in order to support not only scss, but also css files.
  :root is used here instead of "[data-theme="Mode 1"]" to define css variables
  that can be used in the entire app. 
