--- a/apps/src/codebridge/FileTabs/styles/fileTabs.module.scss
+++ b/apps/src/codebridge/FileTabs/styles/fileTabs.module.scss
@@ -1,18 +1,20 @@
-.file-tabs {
+@import 'color.scss';
+
+.fileTabs {
   display: flex;
   justify-content: flex-start;
   gap: 6px;
   align-items: flex-end;
   overflow-x: scroll;
   max-width: 100%;
-  background-color: #3f444b;
-  color: white;
+  background-color: $charcoal;
+  color: $white;
   scrollbar-width: none;
   grid-area: file-tabs;
 }
 
-.file-tab {
-  padding: 0px;
+.fileTab {
+  padding: 0;
   display: flex;
   cursor: pointer;
   white-space: nowrap;
@@ -20,9 +22,10 @@
   gap: 10px;
   padding-left: 2px;
   padding-right: 2px;
+  background-color: $dark_charcoal;
 }
 
-.inline-button {
+.inlineButton {
   border: none;
   background: none;
   color: inherit;
@@ -33,7 +36,7 @@
   white-space: nowrap;
 }
 
-.file-tab.active {
+.active {
   font-weight: bold;
   background-color: #292f36;
 }
